[package]
name = "nizctl"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.42"
hidapi = "2.6.4"
packed_struct = { version = "0.6", features = [ "byte_types_64" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialog = "0.3.0"
